--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -1,22 +1,10 @@
 <aside class="sidenav">
-    <div class="sidenav-header">
-        <span class="logo">ONE-ERP</span>
-    </div>
     <nav class="sidenav-nav">
-        <a href="/dashboard" class="nav-item">
-            <span>Dashboard</span>
-        </a>
-        <a href="/dashboard/students" class="nav-item">
-            <span>Students</span>
-        </a>
-        <a href="/dashboard/courses" class="nav-item">
-            <span>Courses</span>
-        </a>
-        <a href="/dashboard/teachers" class="nav-item">
-            <span>Teachers</span>
-        </a>
+        <a href="/dashboard" class="nav-item"><span>Dashboard</span></a>
+        <a href="/dashboard/students" class="nav-item"><span>Students</span></a>
+        <a href="/dashboard/courses" class="nav-item"><span>Courses</span></a>
+        <a href="/dashboard/subjects" class="nav-item"><span>Subjects</span></a>
+        <a href="/dashboard/teachers" class="nav-item"><span>Teachers</span></a>
+        <a href="/logout" class="nav-item"><span>Logout</span></a>
     </nav>
-    <div class="sidenav-footer">
-        <a href="/logout" class="logout-btn">Logout</a>
-    </div>
-</aside>
+    </aside>
