--- a/views/teacher-dashboard.ejs
+++ b/views/teacher-dashboard.ejs
@@ -17,27 +17,23 @@
             </header>
             <div class="card-grid">
                 <div class="dashboard-card card-full-width">
-                    <h2>My Assigned Courses</h2>
-                    <% if (myCourses.length === 0) { %>
-                        <p>You have not been assigned any courses yet.</p>
-                    <% } else { %>
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Course Name</th>
-                                    <th>Course Code</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <% myCourses.forEach(course => { %>
+                    <h2>My Assigned Subjects</h2>
+                        <% if (mySubjects.length === 0) { %>
+                            <p>You have not been assigned any subjects yet.</p>
+                        <% } else { %>
+                            <table>
+                                <thead><tr><th>Subject Name</th><th>Course</th><th>Year</th></tr></thead>
+                                <tbody>
+                                    <% mySubjects.forEach(subject => { %>
                                     <tr>
-                                        <td><%= course.name %></td>
-                                        <td><%= course.code %></td>
+                                        <td><%= subject.name %></td>
+                                        <td><%= subject.course.name %></td>
+                                        <td><%= subject.year %></td>
                                     </tr>
-                                <% }) %>
-                            </tbody>
-                        </table>
-                    <% } %>
+                                    <% }) %>
+                                </tbody>
+                            </table>
+                        <% } %>
                 </div>
             </div>
         </main>
