added attendance func

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,7 +5,7 @@
 <div class="auth-wrapper">
     <div class="auth-branding">
         <div class="auth-branding-content">
-            <h2>ONE-ERP</h2>
+            <h2>InstituteOS</h2>
             <p>Join the next generation of campus management systems.</p>
         </div>
     </div>
