--- a/views/add-student.ejs
+++ b/views/add-student.ejs
@@ -39,7 +39,15 @@
                     <h4>Personal Details</h4>
                     <div class="form-group"><label>Date of Birth</label><input type="date" name="dob"></div>
                     <div class="form-group"><label>Gender</label><select name="gender"><option>Male</option><option>Female</option><option>Other</option></select></div>
-                    <div class="form-group"><label>Email</label><input type="email" name="email"></div>
+                    <h4>Login Credentials</h4>
+                    <div class="form-group">
+                        <label>Login Email</label>
+                        <input type="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="password" name="password" required>
+                    </div>
                     <div class="form-group"><label>Phone</label><input type="text" name="phone"></div>
                     <div class="form-group"><label>Address</label><input type="text" name="address"></div>
 
@@ -48,8 +56,7 @@
                     <div class="form-group"><label>Guardian Contact</label><input type="text" name="guardianContact"></div>
                     
                     <h4>Other</h4>
-                    <div class="form-group"><label><input type="checkbox" name="feesPaid"> Fees Paid</label></div>
-                    
+                    <div class="form-group"><label> Fees Paid<input type="checkbox" name="feesPaid"></label></div>
                     <button type="submit" class="btn btn-primary">Save Student</button>
                 </form>
             </div>
