--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 <div class="auth-wrapper">
     <div class="auth-branding">
         <div class="auth-branding-content">
-            <h2>ONE-ERP</h2>
+            <h2>InstituteOS</h2>
             <p>The future of Integrated Campus Management is here.</p>
         </div>
     </div>
