updated UI and added landing page

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,7 +5,7 @@
 <div class="auth-wrapper">
     <div class="auth-branding">
         <div class="auth-branding-content">
-            <h2>InstituteOS</h2>
+            <img src="/assets/InstituteOS_LOGO_bg.png" alt="logo" style="height: 300px;">
             <p>Join the next generation of campus management systems.</p>
         </div>
     </div>
